--- a/rules.html
+++ b/rules.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <p>Перед вами находятся 3 двери. За одной из них находится монстр. Вам нужно пройти 50 комнат, выбирая дверь без привидений, чтобы выбраться из здания.</p>
-        <a href="menu.html"><button>В меню</button></a>
+        <a href="https://progronick.github.io/ghost_game"><button>В меню</button></a>
     </main>
     <footer>
         <code>Made by <a href="https://progronick.github.io/portfolio">ProgroNick</a></code>
